# raytracer-c

./: CMakeLists.txt  README.md
exec/: CMakeLists.txt  main.c
lib/: CMakeLists.txt
lib/core/: tuples.c  tuples.h
src/: main.c
tests/: CMakeLists.txt  test.c
